# BrickPi3

./: .gitignore  Installation_FAQ.md  LICENSE.md  README.md
.github/workflows/: publish-pypi.yml
Firmware/: README.md  brickpi3samd_flash_firmware.sh  brickpi3samd_restart_samd.sh
Firmware/openocd/: install_openocd_compiled.sh
Install/: README.md  install.sh  install_buster.sh  install_trixie.sh  update_brickpi3.sh
Projects/: Simplebot.py
Software/Python/: MANIFEST.in  README.md  brickpi3.py  pyproject.toml  setup.py
Software/Python/Examples/: Analog_Sensor.py  Analog_Sensors.py  BrickPi3_Stack_Set_Address.py  DI-dGPS.py  DI-dPress.py  DI-dTIR.py  DI-dTemp.py  EV3-Color_Sensor_Color.py  EV3-Color_Sensor_Multi_Mode.py  EV3-Color_Sensor_Raw.py  EV3-Gyro.py  EV3-Infrared.py  EV3-Infrared_Remote.py  EV3-Ultrasonic.py  LED.py  LEGO-Motor_DPS.py  LEGO-Motor_Degrees_Per_Second.py  LEGO-Motor_Encoder.py  LEGO-Motor_Position.py  LEGO-Motor_Power.py  LEGO-Motor_Speed.py  LEGO-Motor_Status.py  LEGO-Motors.py  LEGO-Touch_Sensor.py  NXT-Color_Sensor_Color.py  NXT-Color_Sensor_Red_LED.py  NXT-Light_Sensor.py  NXT-Ultrasonic_Sensor.py  Read_Info.py  Read_Voltage_And_Info.py  Read_Voltages.py  Test_Connected.py
Software/Python/Projects/: BalanceBot.py
Software/Python/Projects/browserBot/: RPi_Server_Code.py  stream_server.py
Software/Python/brickpi3/: __init__.py  core.py  use_local.sh
Software/Python/brickpi3/examples/: Analog_Sensor.py  BrickPi3_Stack_Set_Address.py  EV3-Color_Sensor_Color.py  EV3-Color_Sensor_Multi_Mode.py  EV3-Color_Sensor_Raw.py  EV3-Gyro.py  EV3-Infrared.py  EV3-Infrared_Remote.py  EV3-Ultrasonic.py  LED.py  LEGO-Motor_DPS.py  LEGO-Motor_Encoder.py  LEGO-Motor_Position.py  LEGO-Motor_Power.py  LEGO-Motor_Status.py  LEGO-Motors.py  LEGO-Touch_Sensor.py  NXT-Color_Sensor_Color.py  NXT-Color_Sensor_Red_LED.py  NXT-Light_Sensor.py  NXT-Ultrasonic_Sensor.py  Read_Voltages.py  auto_detect_robot.py
Software/Python/brickpi3/scripts/: install_trixie.sh  trixie_setup_gui.sh
Software/Python/brickpi3/troubleshooting/: BrickPi3_Troubleshooter.desktop  README.md  all_tests.sh  hardware_and_firmware_test.sh  launch_brickpi3_troubleshooter.sh  launch_troubleshooter.sh  test_connected.py  troubleshoot.py  troubleshooter_gui.py
Software/Rust/brickpi3/: Cargo.toml
Software/Rust/brickpi3/examples/: info.rs  motors.rs  sensors_ev3.rs
Software/Rust/brickpi3/src/: lib.rs
Troubleshooting/: README.md  all_tests.sh  hardware_and_firmware_test.sh
(+34 files in other folders)
